--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,8 +22,11 @@ jobs:
           working_directory: library
           branches: |
             [
-              'main', 
+              'main',
             ]
+      - name: Trigger website update
+        run: |
+          curl -XPOST -u "howmuchbot:${{secrets.HOWMUCHBOT_GH_TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/howmuchgreen/website/dispatches --data '{"event_type": "upgrade-library"}'
     env:
       GITHUB_TOKEN: ${{ secrets.HOWMUCHBOT_GH_TOKEN }}
       NPM_TOKEN: ${{ secrets.HOWMUCHBOT_NPM_TOKEN }}
